phase2/test/test_12012013_2.out
Error type 7 at Line 6: binary operation on non-number variables
Error type 8 at Line 8: incompatiable return type
