phase2/test/test_12012013_2.spl
struct YY{
    float a[1];
};
int test_2_r01()
{
  int x4 = 3 + 1.6;
  struct YY yy;
  return yy.a[1];
}